--- a/#style.css
+++ b/#style.css
@@ -2,3 +2,9 @@
     margin: 0;
     padding: 0;
 }
+
+body {
+    background-color: rgb(112, 0, 218);
+    color: rgb(0, 0, 0);
+    font-size: 40px;
+}
